--- a/graphics.raytrace/todo.txt
+++ b/graphics.raytrace/todo.txt
@@ -1,3 +1,8 @@
 - Get groups YAML file from book working
+  o Still something wrong!
+
 - Create a file to test patterns in groups
-- Convert Color to a pattern; test embedded patterns
+- Chapter 14 Groups - Using Bounding Boxes to Optimize Large Scenes
+- Chapter 10 Patterns - Putting It Together : Nested Patterns (Convert Color to a pattern)
+- Chapter 10 Patterns - Putting It Together : Blended Patterns
+- Chapter 10 Patterns - Putting It Together : Radial Gradient Pattern,
