--- a/graphics.raytrace/todo.txt
+++ b/graphics.raytrace/todo.txt
@@ -1,15 +1,10 @@
-- DONE group.yml not parsing
-- DONE AppView: Display document in the title bar
-- DONE Tree outline of objects
-- DONE Chapter 14 Groups - Using Bounding Boxes to Optimize Large Scenes
-- DONE Chapter 14 Groups / Bonus: Performance on load with bounding-boxes.yml
-- DONE Bonus Bounding Boxes: Part 2 - BVH
 - Property browser
 
 - Create a file to test patterns in groups
 - Chapter 10 Patterns - Putting It Together : Nested Patterns (Convert Color to a pattern)
 - Chapter 10 Patterns - Putting It Together : Blended Patterns
 - Chapter 10 Patterns - Putting It Together : Radial Gradient Pattern,
+- Implement the christmas.yml fir_branch object
 
 - Cancellable : when switching to Java 9+, use takeWhile
 
@@ -19,3 +14,11 @@ Change progress to show:
 Completed                         
 Remaining
 Total
+
+
+- DONE group.yml not parsing
+- DONE AppView: Display document in the title bar
+- DONE Tree outline of objects
+- DONE Chapter 14 Groups - Using Bounding Boxes to Optimize Large Scenes
+- DONE Chapter 14 Groups / Bonus: Performance on load with bounding-boxes.yml
+- DONE Bonus Bounding Boxes: Part 2 - BVH
