Work with lights, including fix a problem.
Fixed problems with area lights where the position was incorrectly
calculated.
Moved Lights into a separate package.
Implement a feature to render a single pixel.

--- a/graphics.raytrace/todo.txt
+++ b/graphics.raytrace/todo.txt
@@ -35,3 +35,4 @@ Total
 - DONE Bonus Bounding Boxes: Part 2 - BVH
 - DONE 2020-07-17 Make Parser a stateful object
 - DONE 2020-07-17 Implement the christmas.yml fir_branch object
+- DONE 2020-07-28 Add a menu to render a single pixel
